# zerokara_nn

./: .gitignore  CMakeLists.txt  README.md  makefile
include/: Backpropagation.h  NeuralNetwork.h  conv_layer.h  dense_layer.h  layer.h  layer_base.h  utils.h
src/: NeuralNetwork.cpp  benchmark_CNN+sigmoid.cpp  benchmark_CNN+softmax.cpp  benchmark_sigmoid.cpp  benchmark_softmax.cpp  conv_layer.cpp  dense_layer.cpp  layer.cpp  main.cpp  utils.cpp
